<resources>
    <string name="app_name">MoviesDiscover</string>

    <string name="hello_discover_fragment">Hello movies fragment</string>
    <string name="hello_details_fragment">Hello details fragment</string>
    <string name="cast_label">Cast</string>
    <string name="share_movie">Share</string>
    <string name="box_office_label">Box office</string>
    <string name="budget_label">Budget</string>
    <string name="movie_revenue_label">Revenue</string>
    <string name="movie_overview_label">Overview</string>

    <string name="failure_alert_dialog_title">Request failed</string>
    <string name="failure_alert_dialog_message">Check your internet connection and try again.</string>
    <string name="failure_alert_dialog_button_text">OK</string>

</resources>